# qaseprite

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  aseprite-fix-zlib-include.patch  aseprite-msvc-dynamic-runtime.patch  cityhash-fix-byteswap.patch  create-source-archive.sh  laf-include-cstdint.patch  laf-msvc-dynamic-runtime.patch  qaseprite.cpp  qaseprite.json  update-submodules.sh
.github/workflows/: build.yml  ubuntu.yml
cmake/: Qt5Plugin.cmake
